# WrestleGM

./: .gitignore  .init_prd.md.swp  AGENTS.md  DEVELOPMENT.md  PROPOSALS.md  README.md  main.py  make_prd.sh  mkdocs.yml  prd.md  pyproject.toml  wrestle_gm_textual_mvp_prd.md
.github/scripts/: pytest_comment.py
.github/workflows/: pr-tests.yml
data/: match_types.json  wrestlers.json
docs/: api.md  architecture.md  implementation.md  index.md  simulation.md  ui.md
openspec/: AGENTS.md  project.md
openspec/changes/add-booking-indicators/: tasks.md
openspec/changes/add-docs-site/: proposal.md  tasks.md
openspec/changes/add-game-hub-screen/: proposal.md  tasks.md
openspec/changes/add-multi-man-matches/: tasks.md
openspec/changes/add-pr-ci/: proposal.md  tasks.md
openspec/changes/add-promos/: design.md  proposal.md  tasks.md
openspec/changes/add-rivalry-mechanic/: design.md  proposal.md  tasks.md
openspec/changes/add-save-load/: design.md  tasks.md
openspec/changes/add-ui-testing/: proposal.md  tasks.md
openspec/changes/add-wrestlegm-mvp/: tasks.md
openspec/changes/fix-arrow-navigation/: proposal.md  (+1 more)
skills/update-prd/: SKILL.md
tests/: test_persistence.py  test_rivalry.py  test_simulation.py  test_simulation_engine.py  test_state_validation.py  test_ui_flows.py  test_ui_snapshot_registry.py  test_ui_snapshots.py  ui_snapshot_utils.py  ui_test_utils.py
wrestlegm/: __init__.py  constants.py  data.py  models.py  persistence.py  persistence_models.py  rivalries.py  session.py  sim.py  state.py  ui.py
wrestlegm/prototypes/: rich_pixels_demo.py
(+152 files in other folders)
