[project]
name = "at3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=7.1.0",
    "rich-pixels",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.25.1",
    "pytest>=9.0.2",
    "pytest-textual-snapshot>=1.0.0",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --snapshot-dirname=snapshots"
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".venv"]
